force-app/main/default/Objects/Content_Item_Publication__c/Content_Item_Publication__c.object-meta.xml
<CustomObject>
    <description>Where and when a content item was published</description>
    <label>Content Item Publication</label>
    <nameField>
        <displayFormat>CIP{0000}</displayFormat>
        <label>Content Item Publication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Item Publications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>