force-app/main/default/Objects/Content_Item_Publication__c/fields/Content_Item__c.field-meta.xml
<CustomField>
    <fullName>Content_Item__c</fullName>
    <description>The content to be published</description>
    <inlineHelpText>The content to be published</inlineHelpText>
    <label>Content Item</label>
    <referenceTo>ContentItem__c</referenceTo>
    <relationshipLabel>Content Item Publications</relationshipLabel>
    <relationshipName>Content_Item_Publications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>