force-app/main/default/Objects/Content_Item_Publication__c/fields/Date_Published__c.field-meta.xml
<CustomField>
    <fullName>Date_Published__c</fullName>
    <description>Date content was published</description>
    <inlineHelpText>Date content was published</inlineHelpText>
    <label>Date Published</label>
    <type>Date</type>
</CustomField>