force-app/main/default/Objects/Content_Item_Publication__c/fields/DateUploaded__c.field-meta.xml
<CustomField>
    <fullName>DateUploaded__c</fullName>
    <description>Date content was uploaded to the platform</description>
    <inlineHelpText>Date content was uploaded to the platform</inlineHelpText>
    <label>Date Uploaded</label>
    <type>Date</type>
</CustomField>