force-app/main/default/Objects/Content_Item_Publication__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>URL of the content item on the platform</description>
    <inlineHelpText>Date content was uploaded to the platform</inlineHelpText>
    <label>Location</label>
    <type>Url</type>
</CustomField>