force-app/main/default/Objects/Content_Item_Publication__c/fields/Planned_Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Publication_Date__c</fullName>
    <description>Date this content item is planned to be published on the platform</description>
    <inlineHelpText>Date this content item is planned to be published on the platform</inlineHelpText>
    <label>Planned Publication Date</label>
    <type>Date</type>
</CustomField>