force-app/main/default/Objects/Content_Item_Publication__c/fields/Planned_Year__c.field-meta.xml
<CustomField>
    <fullName>Planned_Year__c</fullName>
    <description>Year when item is planned for publication</description>
    <formula>TEXT(YEAR( Planned_Publication_Date__c ))</formula>
    <inlineHelpText>Year when item is planned for publication</inlineHelpText>
    <label>Planned Year</label>
    <type>Text</type>
</CustomField>