force-app/main/default/Objects/Content_Item_Publication__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Where is the content item published?</description>
    <inlineHelpText>Where is the content item published?</inlineHelpText>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>SubstackNotesFromTheTrail</fullName>
                <label>Substack (Notes from the Trail)</label>
            </value>
            <value>
                <fullName>Substack (Newsletter)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>