force-app/main/default/Objects/Content_Item_Publication__c/fields/Published_Month__c.field-meta.xml
<CustomField>
    <fullName>Published_Month__c</fullName>
    <description>Month when item was published</description>
    <formula>CASE (MONTH(Date_Published__c),
1,&apos;Jan&apos;,
2,&apos;Feb&apos;,
3,&apos;Mar&apos;,
4,&apos;Apr&apos;,
5,&apos;May&apos;,
6,&apos;Jun&apos;,
7,&apos;Jul&apos;,
8,&apos;Aug&apos;,
9,&apos;Sep&apos;,
10,&apos;Oct&apos;,
11,&apos;Nov&apos;,
12,&apos;Dec&apos;,&apos;&apos;)</formula>
    <inlineHelpText>Month when item was published</inlineHelpText>
    <label>Published Month</label>
    <type>Text</type>
</CustomField>