force-app/main/default/Objects/Content_Item_Publication__c/fields/Published_Year__c.field-meta.xml
<CustomField>
    <fullName>Published_Year__c</fullName>
    <description>Year when item was published</description>
    <formula>YEAR( Date_Published__c )</formula>
    <inlineHelpText>Year when item was published</inlineHelpText>
    <label>Published Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>