force-app/main/default/Objects/Content_Item_Publication__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Reference defined when published</description>
    <inlineHelpText>Reference defined when published</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>