force-app/main/default/Objects/Content_Item_Publication__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>General type of content item</description>
    <label>General</label>
</RecordType>