force-app/main/default/Objects/Content_Item_Publication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Platform__c</columns>
    <columns>DateUploaded__c</columns>
    <columns>Planned_Publication_Date__c</columns>
    <columns>Date_Published__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Content_Item_Publication__c.General</value>
    </filters>
    <label>All</label>
</ListView>