force-app/main/default/Objects/Content_Item_Publication__c/listViews/All_LinkedIn.listView-meta.xml
<ListView>
    <fullName>All_LinkedIn</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Platform__c</columns>
    <columns>DateUploaded__c</columns>
    <columns>Planned_Publication_Date__c</columns>
    <columns>Date_Published__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform__c</field>
        <operation>equals</operation>
        <value>LinkedIn</value>
    </filters>
    <label>All LinkedIn</label>
</ListView>