force-app/main/default/Objects/Content_Item_Publication__c/listViews/AllSubstack.listView-meta.xml
<ListView>
    <fullName>AllSubstack</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Platform__c</columns>
    <columns>DateUploaded__c</columns>
    <columns>Planned_Publication_Date__c</columns>
    <columns>Date_Published__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform__c</field>
        <operation>equals</operation>
        <value>SubstackNotesFromTheTrail</value>
    </filters>
    <label>Substack (Notes from the Trail)</label>
</ListView>