force-app/main/default/Objects/Content_Item_Publication__c/listViews/AllYouTube.listView-meta.xml
<ListView>
    <fullName>AllYouTube</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>DateUploaded__c</columns>
    <columns>Date_Published__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform__c</field>
        <operation>equals</operation>
        <value>YouTube</value>
    </filters>
    <label>All YouTube</label>
</ListView>